--- a/local_react_frontend/public/index.html
+++ b/local_react_frontend/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="jukebox.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/jukebox.css">
     <link rel="icon" type="image/png" href="./favicon.ico"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
